# tap-google-analytics

./: .gitignore  pyproject.toml  reports.json
tap_google_analytics/: __init__.py
