[tool.poetry]
name = "tap-google-analytics"
version = "0.1.0"
description = ""
authors = ["Ryan Allen <rcallen89@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
singer-python = "^5.6.1"
python-dotenv = "^0.15.0"
backoff = "1.3.2"
oauth2client = "4.1.3"
google-api-python-client = "^1.12.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
autopep8 = "^1.5.4"
pylint = "^2.6.0"
coverage = "^5.3.1"
pytest-cov = "^2.11.1"
vcrpy = "^4.1.1"
pytest-vcr = "^1.0.2"

[tool.poetry.scripts]
tap-google-analytics = 'tap_google_analytics:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
